# video-processor

./: .gitattributes  .gitignore  =3.0.0  README.md  config.toml  google-cloud-2025-06-18-15-18-55.md  program-flow.md  pyproject.toml  readme_rmh.md  watchv0nqmBjBIXOg_openai_o4-mini_20250825-103624.md
.claude/: settings.local.json
video_processor/: __init__.py  cli.py  config.py  config_template.toml  converter.py  downloader.py  llm_client.py  srt_parser.py
video_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
video_processor/prompts/: transcribe.tpl
